--- a/harithmapos/templates/invoice/update.html
+++ b/harithmapos/templates/invoice/update.html
@@ -128,7 +128,7 @@
                 <div class="col">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="inputGroup-sizing-default">Service Status</span>
-                    {{ invoice_head_update_form.service_status(class="form-control form-control", value=invoice_head.service_status) }}
+                    {{ invoice_head_update_form.service_status(class="form-control form-control", default=invoice_head.service_status) }}
                 </div>
                 </div>
             </div>
