--- a/harithmapos/templates/invoice/head.html
+++ b/harithmapos/templates/invoice/head.html
@@ -86,6 +86,7 @@
                     <th scope="col">Customer</th>
                     <th scope="col">Vehical</th>
                     <th scope="col">Employee</th>
+                    <th scope="col">Wash Bay</th>
                     <th scope="col">Status</th>
                     <th scope="col">Amount</th>
                     <th scope="col" style="text-align: right" >Actions</th>
@@ -99,6 +100,7 @@
                         <td class="align-middle">{{invoice_head.customer.name}}</td>
                         <td class="align-middle">{{invoice_head.vehical.number}}</td>
                         <td class="align-middle">{{invoice_head.employee.name}}</td>
+                        <td class="align-middle">{{invoice_head.washbay.name}}</td>
                         <td class="align-middle">{{invoice_head.service_status_str}}</td>
                         <td class="align-middle">{{invoice_head.gross_price}}</td>
                         <td class="text-end">
