--- a/harithmapos/templates/dashboard.html
+++ b/harithmapos/templates/dashboard.html
@@ -79,12 +79,12 @@
             <div class="col mt-3">
                 <div class="card border-success">
                     <div class="card-header d-flex">
-                        <span>{{ washbay.name }}</span>
+                        <span><b>{{ washbay.name }}</b></span>
                         <span class="ms-auto"><b>{{ washbay.active_invoice.vehical.number }}</b></span>
                         {% if washbay.invoices[0].is_in_bay %}
-                            <span class="ms-auto text-success"><i class="bi bi-circle-fill"></i> Active</span>
+                            <span class="ms-auto text-success"><i class="bi bi-circle-fill"></i> In bay</span>
                         {% else %}
-                            <span class="ms-auto text-secondary"><i class="bi bi-circle"></i> Inactive</span>
+                            <span class="ms-auto text-secondary"><i class="bi bi-circle"></i> Outside</span>
                         {% endif %}
                     </div>
                     <div class="card-body">
@@ -129,6 +129,65 @@
                     <div class="card-footer">  
                         <div class="d-grid gap-2 col-6 mx-auto">
                             <a href="{{ url_for('invoice_head_blueprint.invoice_head_detail', invoice_head_id=washbay.invoices[0].id) }}" class="btn btn-primary">Go to Invoice</a>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        {% endfor %}
+        {% for invoice in polishing_invoices %}
+            <div class="col mt-3">
+                <div class="card border-success">
+                    <div class="card-header d-flex">
+                        <span>Polishing Area</span>
+                        <span class="ms-auto"><b>{{ invoice.vehical.number }}</b></span>
+                        {% if invoice.is_in_bay %}
+                            <span class="ms-auto text-success"><i class="bi bi-circle-fill"></i> In bay</span>
+                        {% else %}
+                            <span class="ms-auto text-secondary"><i class="bi bi-circle"></i> Outside</span>
+                        {% endif %}
+                    </div>
+                    <div class="card-body">
+                        <div class="progress" style="height:30px;">
+                            {% for status_number, service_status in service_status_form_list %}
+                                {% if invoice.service_status < status_number %}
+                                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"><i class="bi bi-hourglass-split"> {{ service_status }}</i></div>
+                                {% elif invoice.service_status == status_number %}
+                                    <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" style="width: 30%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"><i class="bi bi-arrow-repeat text-dark"> {{ service_status }}</i></div>
+                                {% else %}
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"><i class="bi bi-check-circle-fill"> {{ service_status }}</i></div>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <div class="row mt-3 text-center">
+                            <div class="col">
+                                <div class="row mb-1">
+                                    <small>Customer</small>
+                                    <h5>{{ invoice.customer.name }}</h5>
+                                </div>
+                                <div class="row mb-1">
+                                    <small>Employee</small>
+                                    <h5>{{ invoice.employee.name }}</h5>
+                                </div>
+                                <div class="row mb-1">
+                                    <small>Current Total</small>
+                                    <h5>{{ invoice.total_price }}</h5>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="row mb-1">
+                                    <small>Elapsed Time</small>
+                                    <h5>{{ invoice.created_dttm | elapsed_time }}</h5>
+                                </div>
+                                <div class="row mb-1">
+                                    <small>Started Time</small>
+                                    <h5>{{ invoice.created_dttm | to_ist }}</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">  
+                        <div class="d-grid gap-2 col-6 mx-auto">
+                            <a href="{{ url_for('invoice_head_blueprint.invoice_head_detail', invoice_head_id=invoice.id) }}" class="btn btn-primary">Go to Invoice</a>
                         </div>
                     </div> 
                 </div>
