--- a/harithmapos/templates/dashboard.html
+++ b/harithmapos/templates/dashboard.html
@@ -81,7 +81,7 @@
                     <div class="card-header d-flex">
                         <span><b>{{ washbay.name }}</b></span>
                         <span class="ms-auto"><b>{{ washbay.active_invoice.vehical.number }}</b></span>
-                        {% if washbay.invoices[0].is_in_bay %}
+                        {% if washbay.active_invoice.is_in_bay %}
                             <span class="ms-auto text-success"><i class="bi bi-circle-fill"></i> In bay</span>
                         {% else %}
                             <span class="ms-auto text-secondary"><i class="bi bi-circle"></i> Outside</span>
@@ -90,9 +90,9 @@
                     <div class="card-body">
                         <div class="progress" style="height:30px;">
                             {% for status_number, service_status in service_status_form_list %}
-                                {% if washbay.invoices[0].service_status < status_number %}
+                                {% if washbay.active_invoice.service_status < status_number %}
                                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"><i class="bi bi-hourglass-split"> {{ service_status }}</i></div>
-                                {% elif washbay.invoices[0].service_status == status_number %}
+                                {% elif washbay.active_invoice.service_status == status_number %}
                                     <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" style="width: 30%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"><i class="bi bi-arrow-repeat text-dark"> {{ service_status }}</i></div>
                                 {% else %}
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"><i class="bi bi-check-circle-fill"> {{ service_status }}</i></div>
@@ -103,32 +103,32 @@
                             <div class="col">
                                 <div class="row mb-1">
                                     <small>Customer</small>
-                                    <h5>{{ washbay.invoices[0].customer.name }}</h5>
+                                    <h5>{{ washbay.active_invoice.customer.name }}</h5>
                                 </div>
                                 <div class="row mb-1">
                                     <small>Employee</small>
-                                    <h5>{{ washbay.invoices[0].employee.name }}</h5>
+                                    <h5>{{ washbay.active_invoice.employee.name }}</h5>
                                 </div>
                                 <div class="row mb-1">
                                     <small>Current Total</small>
-                                    <h5>{{ washbay.invoices[0].total_price }}</h5>
+                                    <h5>{{ washbay.active_invoice.total_price }}</h5>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="row mb-1">
                                     <small>Elapsed Time</small>
-                                    <h5>{{ washbay.invoices[0].created_dttm | elapsed_time }}</h5>
+                                    <h5>{{ washbay.active_invoice.created_dttm | elapsed_time }}</h5>
                                 </div>
                                 <div class="row mb-1">
                                     <small>Started Time</small>
-                                    <h5>{{ washbay.invoices[0].created_dttm | to_ist }}</h5>
+                                    <h5>{{ washbay.active_invoice.created_dttm | to_ist }}</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="card-footer">  
                         <div class="d-grid gap-2 col-6 mx-auto">
-                            <a href="{{ url_for('invoice_head_blueprint.invoice_head_detail', invoice_head_id=washbay.invoices[0].id) }}" class="btn btn-primary">Go to Invoice</a>
+                            <a href="{{ url_for('invoice_head_blueprint.invoice_head_detail', invoice_head_id=washbay.active_invoice.id) }}" class="btn btn-primary">Go to Invoice</a>
                         </div>
                     </div> 
                 </div>
